src/tests/test-src/errors/E38-empty-step.syntran
// E38: empty-step
// A slice step was omitted between two colons

let a = [0, 1, 2, 3, 4];
let b = a[::1];
